# scan-to-drape

./: .gitignore  CLAUDE.md  CMakeLists.txt  HOSTING.md  README.md  index.html
demo/: index.html  viewer.js  viewer.wasm
include/cloth/: cloth.hpp
include/gsplat/: camera.hpp  mesh.hpp  ply_loader.hpp  shader.hpp
shaders/: axis.vert  mesh.frag  mesh.vert  splat.frag  splat.vert
src/: main.cpp
tools/: clean_scan.py  export_web.py
web/: shell.html
